<resources>
    <string name="app_name">Instagram</string>
    <string name="instagram_logo">Instagram Logo</string>
    <string name="like_icon">like_icon</string>
    <string name="dm_icon">dm_icon</string>
    <string name="_128k">128k</string>
    <string name="comment_icon">comment_icon</string>
    <string name="_686">686</string>
    <string name="share_icon">share_icon</string>
    <string name="image_view_photo">image_view_photo</string>
    <string name="from">from</string>
    <string name="maysakz">maysakz</string>
    <string name="dotmenu">dotmenu</string>
    <string name="the_data_from_badan_pusat_statistika_bps_shows_that_the_batak_ethnic_group_has_the_highest_percentage_of_university_graduates_in_indonesia_in_2024_they_are_followed_by_the_minangkabau_balinese_and_bugis_ethnic_groups_social_observer_togar_butar_butar_explained_that_this_could_happen_because_the_batak_people_highly_value_education_with_their_life_philosophy_emphasizing_wealth_successful_descendants_and_social_honor_they_continually_encourage_their_children_to_pursue_higher_education_what_do_you_think">The data from Badan Pusat Statistika (BPS) shows that the Batak ethnic group has the highest percentage of university graduates in Indonesia in 2024. They are followed by the Minangkabau, Balinese, and Bugis ethnic groups. Social observer Togar Butar-Butar explained that this could happen because the Batak people highly value education. With their life philosophy emphasizing wealth, successful descendants, and social honor, they continually encourage their children to pursue higher education. What do you think? 👏🏻👏🏻🇮🇩🇮🇩🇮🇩</string>
    <string name="more">more</string>
    <string name="maysa_nlivestream_on_youtube_maysa_kz_n_contact_maysakz_business_gmail_com">Maysa\nLivestream on Youtube : Maysa Kz\n📩Contact : maysakz.business@gmail.com</string>
    <string name="posts">Posts</string>
</resources>