<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/black"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="5dp"
        android:gravity="center_vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:src="@drawable/maomao"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maysakz"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginTop="-2dp"
            android:letterSpacing="0.05"
            android:textColor="@color/white"/>

        <View
            android:layout_width="240dp"
            android:layout_height="match_parent"/>

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/dotmenu_icon"
            android:contentDescription="@string/dotmenu" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPhotos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:nestedScrollingEnabled="false"
        />


    <ImageView
        android:id="@+id/ivHeartAnimation"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:alpha="0"
        android:layout_marginTop="-210dp"
        android:layout_marginBottom="105dp"
        android:src="@drawable/ic_like_white" />

    <LinearLayout
        android:id="@+id/indicatorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:visibility="visible"
        >

    </LinearLayout>

    <LinearLayout
        android:padding="0dp"
        android:id="@+id/bagianCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="0dp">
<!--        <androidx.appcompat.widget.AppCompatTextView-->
<!--            android:paddingStart="5dp"-->
<!--            android:id="@+id/tvUsername1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/maysakz"-->
<!--            android:textSize="14sp"-->
<!--            android:textColor="@color/white"-->
<!--            android:textStyle="bold"/>-->

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="assasdadsa ASHDASD asdasda sdkahsdkjasbdjhasdjahsdjasbda"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShowMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textColor="@color/gray"/>
    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <ImageView
            android:id="@+id/tvLikesIcon"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_like_unactive"
            android:contentDescription="@string/like_icon"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/_128k"
            android:textAlignment="center"
            android:textSize="14sp"
            />

        <ImageView
            android:id="@+id/tvCommentsIcon"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_comment_unactive"
            android:contentDescription="@string/comment_icon"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="6dp"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/_686"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_share"
            android:contentDescription="@string/share_icon"
            android:layout_marginStart="10dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:weightSum="2">

            <View
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ImageView
                android:id="@+id/iv_save"
                android:layout_width="60dp"
                android:layout_height="22dp"
                android:src="@drawable/ic_saved_unactive"
                android:layout_gravity="end"
                android:layout_weight="1"
                />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
